%% CoreVital Report Schema v0.4.0 — Pydantic Model Hierarchy
%% Shows all models, their fields, and relationships after the audit-57 refactor.
%% NEW fields (v0.4.0) marked with ✚. Renamed/deprecated fields marked with ⟳. Existing marked with ●.
%% Ref: src/CoreVital/reporting/schema.py, CHANGELOG.md (v0.5.0-rc)
%%{init: {'theme':'dark', 'themeVariables': {'primaryColor':'#1e3a5f', 'primaryTextColor':'#e2e8f0', 'lineColor':'#60a5fa', 'clusterBkg':'#1e293b', 'clusterBorder':'#475569'}}}%%

classDiagram
    direction TB

    class Report {
        ● schema_version: str = 0.4.0
        ● trace_id: str
        ● created_at_utc: str
        ● model: ModelInfo
        ● run_config: RunConfig
        ● prompt: PromptInfo
        ● generated: GeneratedInfo
        ● timeline: List~TimelineStep~
        ● encoder_layers: Optional~List~LayerSummary~~
        ● summary: Summary
        ● warnings: List~Warning~
        ● extensions: Dict~str, Any~
        ● prompt_analysis: Optional~PromptAnalysis~
        ● health_flags: Optional~HealthFlags~
    }

    note for Report "extensions dict contains:<br/>- risk: risk_score, risk_factors, blamed_layers (enriched), blamed_layers_flat<br/>- compound_signals: List of CompoundSignal<br/>- early_warning: failure_risk, warning_signals<br/>- fingerprint: vector (25-elem v2), version, prompt_hash<br/>- narrative: summary text<br/>- calibration: divergence_score, anomalies (when profile set)<br/>- metric_consistency: warnings, count (DEBUG only)<br/>- rag (optional): RAGContext<br/>- performance (optional): if --perf flag"

    class TimelineStep {
        ● step_index: int
        ● token: TokenInfo
        ● logits_summary: LogitsSummary
        ● layers: List~LayerSummary~
        ● extensions: Dict~str, Any~
    }

    class TokenInfo {
        ● token_id: int
        ● token_text: str
        ● is_prompt_token: bool
    }

    class LogitsSummary {
        ● entropy: Optional~float~
        ⟳ top1_top2_margin: Optional~float~ DEPRECATED
        ● top_k_margin: Optional~float~
        ✚ topk_mass: Optional~float~ PRIMARY
        ⟳ voter_agreement: Optional~float~ DEPRECATED alias
        ✚ topk_probs: List~TopKItem~ PRIMARY
        ⟳ topk: List~TopKItem~ DEPRECATED alias
        ● perplexity: Optional~float~
        ● surprisal: Optional~float~
    }

    class TopKItem {
        token_id: int
        token_text: str
        prob: float
    }

    class LayerSummary {
        ● layer_index: int
        ● hidden_summary: HiddenSummary
        ● attention_summary: AttentionSummary
        ● cross_attention: Optional~AttentionSummary~
        ● anomalies: Optional~TensorAnomalies~
        ● extensions: Dict~str, Any~
    }

    note for LayerSummary "cross_attention: Only for decoder layers in Seq2Seq models.<br/>attention_summary: Always self-attention (decoder or encoder)."

    class HiddenSummary {
        ● mean: Optional~float~
        ● std: Optional~float~
        ● l2_norm_mean: Optional~float~
        ● max_abs: Optional~float~
        ● sketch: List~float~
        ● clipped: bool
        ✚ clip_fraction: Optional~float~
        ✚ clip_max_before: Optional~float~
    }

    class AttentionSummary {
        ● entropy_mean: Optional~float~
        ✚ entropy_mean_normalized: Optional~float~
        ● entropy_min: Optional~float~
        ● entropy_max: Optional~float~
        ● concentration_max: Optional~float~
        ● concentration_min: Optional~float~
        ● collapsed_head_count: int = 0
        ● focused_head_count: int = 0
    }

    note for AttentionSummary "entropy_mean_normalized = entropy_mean / log(K)<br/>Range [0,1]; 1.0 = uniform, 0.0 = peaked.<br/>Collapse: normalized < 0.03 (not raw 0.1 nats)."

    class TensorAnomalies {
        has_nan: bool = false
        has_inf: bool = false
    }

    class PromptAnalysis {
        layers: List~PromptAttentionLayer~
        layer_transformations: List~float~
        prompt_surprisals: List~float~
    }

    class PromptAttentionLayer {
        heads: List~SparseAttentionHead~
        basin_scores: List~float~
    }

    class SparseAttentionHead {
        query_indices: List~int~
        key_indices: List~int~
        weights: List~float~
    }

    class HealthFlags {
        nan_detected: bool = false
        inf_detected: bool = false
        attention_collapse_detected: bool = false
        high_entropy_steps: int = 0
        repetition_loop_detected: bool = false
        mid_layer_anomaly_detected: bool = false
    }

    class ModelInfo {
        ● hf_id: str
        ● revision: Optional~str~
        ● architecture: str
        ● num_layers: int
        ● hidden_size: int
        ● num_attention_heads: int
        ● tokenizer_hf_id: str
        ● dtype: Optional~str~
        ● device: str
        ● quantization: QuantizationInfo
    }

    class QuantizationInfo {
        enabled: bool
        method: Optional~str~
    }

    class Summary {
        ● prompt_tokens: int
        ● generated_tokens: int
        ● total_steps: int
        ● elapsed_ms: int
    }

    class Warning {
        code: str
        message: str
    }

    class RAGContext {
        context_token_count: Optional~int~
        retrieved_doc_ids: Optional~List~str~~
        retrieved_doc_titles: Optional~List~str~~
        retrieval_metadata: Optional~Dict~
    }

    class RiskExtension {
        risk_score: float
        risk_factors: List~str~
        ✚ blamed_layers: List~BlamedLayer~
        ✚ blamed_layers_flat: List~int~
    }

    class BlamedLayer {
        <<NEW v0.5.0-rc>>
        layer: int
        reasons: List~str~
        severity: float
    }

    note for BlamedLayer "Reasons: nan_or_inf, attention_collapse_rate,<br/>l2_norm_outlier, l2_norm_instability.<br/>Severity 0.0-1.0. blamed_layers_flat for backward compat."

    class CompoundSignalExtension {
        <<NEW v0.5.0-rc>>
        signals: List~CompoundSignal~
    }

    class CompoundSignal {
        <<NEW v0.5.0-rc>>
        name: str
        description: str
        severity: float
        evidence: List~str~
    }

    note for CompoundSignal "5 patterns: context_loss, confident_confusion,<br/>degenerating_generation, attention_bottleneck,<br/>confident_repetition_risk."

    class EarlyWarningExtension {
        failure_risk: float
        ✚ warning_signals: List~str~
    }

    note for EarlyWarningExtension "Signals: entropy_accelerating, margin_collapsed,<br/>margin_declining, surprisal_volatile,<br/>entropy_margin_divergence.<br/>Old: entropy_rising, high_entropy REMOVED."

    class FingerprintExtension {
        ✚ vector: List~float~ 25 elements v2
        ✚ version: int = 2
        prompt_hash: str
    }

    note for FingerprintExtension "25-element v2 vector: entropy/margin/surprisal/<br/>agreement profiles with slopes, correlations,<br/>temporal features. is_legacy_fingerprint() for 9-elem."

    class NarrativeExtension {
        summary: str
    }

    note for NarrativeExtension "Data-specific text: actual entropy values,<br/>step indices, token text, compound signals,<br/>blamed layers, actionable recommendations."

    class CalibrationExtension {
        <<NEW v0.5.0-rc>>
        divergence_score: float
        anomalies: List~str~
        baseline_model_id: str
        baseline_num_runs: int
    }

    note for CalibrationExtension "Only present when calibration_profile configured.<br/>divergence_score: 0-1 (mean |z-score| / 6, capped)."

    class MetricConsistencyExtension {
        <<NEW v0.5.0-rc>>
        warnings: List~str~
        count: int
    }

    note for MetricConsistencyExtension "Only present when DEBUG logging enabled.<br/>Checks: perplexity=2^entropy, margin≤mass, etc."

    class PerformanceExtension {
        total_wall_time_ms: float
        parent_operations: List~ParentOperation~
        unaccounted_time: Dict~str, float~
        detailed_breakdown: Optional~object~
    }

    %% ─── Relationships ───
    Report "1" *-- "1" ModelInfo
    ModelInfo "1" *-- "1" QuantizationInfo
    Report "1" *-- "N" TimelineStep
    Report "1" *-- "1" Summary
    Report "1" *-- "0..1" PromptAnalysis
    Report "1" *-- "0..1" HealthFlags
    Report "1" *-- "1" Extensions
    Extensions "0..1" *-- "0..1" RiskExtension
    Extensions "0..1" *-- "0..1" CompoundSignalExtension : NEW
    Extensions "0..1" *-- "0..1" EarlyWarningExtension
    Extensions "0..1" *-- "0..1" FingerprintExtension
    Extensions "0..1" *-- "0..1" NarrativeExtension
    Extensions "0..1" *-- "0..1" CalibrationExtension : NEW
    Extensions "0..1" *-- "0..1" MetricConsistencyExtension : NEW
    Extensions "0..1" *-- "0..1" RAGContext
    Extensions "0..1" *-- "0..1" PerformanceExtension
    RiskExtension "0..*" *-- "0..*" BlamedLayer : NEW
    CompoundSignalExtension "0..*" *-- "0..*" CompoundSignal : NEW
    TimelineStep "1" *-- "1" TokenInfo
    TimelineStep "1" *-- "1" LogitsSummary
    TimelineStep "1" *-- "N" LayerSummary
    LogitsSummary "0..*" *-- "0..*" TopKItem
    LayerSummary "1" *-- "0..1" HiddenSummary
    LayerSummary "1" *-- "0..1" AttentionSummary
    LayerSummary "1" *-- "0..1" TensorAnomalies
    PromptAnalysis "1" *-- "N" PromptAttentionLayer
    PromptAttentionLayer "1" *-- "N" SparseAttentionHead
    Report "1" *-- "N" Warning
